--- a/main.tex
+++ b/main.tex
@@ -435,6 +435,19 @@ All Hartree-Fock, DFT and time-dependent DFT (TD-DFT) energy calculations are pe
 
 \textbf{Chain Alkenes, Ring Molecules}. In additional to Hartree-Fock calculations, DFT is used with PBE0, PBE, TPSS and TPSSh functionals. \cite{pbe0,pbe,tpss,tpssh} The integration grid size is set at \(m4\). Also used are TD-DFT calculations, where the Tamm-Dancoff approximation (CIS) \cite{tammdancoff} is switched on to avoid triplet instability.
 
+\section*{Timings}
+The reduction of computational time necessary for calculations was not our primary aim, however the model that we develop in this work does allow significant gains.
+To illustrate this, we provide in Table \ref{tab:time} a small study done on the C$_{50}$H$_{52}$
+alkene chain.
+Calculations were performed with two different basis sets: def2-SV(P) and QZVPPD.
+When using the pseudo-potential, the basis set was truncated by removing all
+basis functions not necessary to reproduce the
+$\pi$ system.
+In other words, only $p$ functions or those of higher angular momentum were kept.
+As can be seen from Table \ref{tab:time}, the gain increases
+with the size of the basis set as expected.
+The gain ranges from 2.4 (def2-SV(P)) to 8 (QZVPPD).
+
 \section*{\sffamily \Large CONCLUSION}
 
 In this paper pseudo-potentials have been developed for sp$^{2}$-hybridised carbon units containing only one nuclear charge and one electron. 
@@ -802,105 +815,6 @@ calculations def2-TZVP/TD-PBE0.}
 %ENDFIG
 %BEGTAB
 
-%\begin{table}
-%\begin{tabular}{|c|c|c|c|}\hline
-%\textbf{Quantity} & \textbf{Calculated} & \textbf{Observed} & \textbf{Error} \\ \hline
-%  Density & 5.3 & 6.3 & Within limits \\ \hline
-%  Optical magnification & 8.3 & 90.9 & Utterly unacceptable\! \\ \hline
-%\end{tabular}
-%\caption{\label{tbl1} Place table caption here.}
-%\end{table}
-%
-%\begin{table}[ht]
-%\begin{tabular}{c c c}
-%\hline
-% & Coefficient & Exponent \\ 
-%\hline
-%HF & -2.594 & 1.0 \\
-% & -4.788 & 5.0 \\
-% & -7.524 & 10.0 \\
-%\hline
-%PBE0 & -2.605 & 1.0 \\
-% & -4.873 & 5.0 \\
-% & -7.678 & 10.0 \\
-%\hline
-%\end{tabular}
-%\caption{Coefficients and exponents for \(s\)-only pseudo-potentials for CH\(^{\bullet}_{3}\), optimised to give 
-%the all-electron HOMO reference energy of  -10.537~eV (HF) and -6.726~eV (PBE0). 
-%\(d = 0.5\) a.u., as defined in Figure~\ref{figure:ref_pseudo_diagram}.}
-%\label{table:ch3_s_potentials}
-%\end{table}
-%
-%\newpage
-%
-%\begin{table}[ht]
-%\begin{tabular}{c c c c}
-%\hline
-%& $d$ & \(s\) coefficient & \( \pi \)  \\
-%\hline
-%HF$^a$   &     &        & -10.363 \\
-%PBE0$^a$ &     &        & -6.632 \\
-%HF       & 2.0 & -7.521 & -9597.0 \\
-%HF       & 0.5 & -7.521  & -7.905 \\
-%PBE0     & 0.5 &-7.678  & -8.447 \\
-%\hline
-%\multicolumn{4}{l}{$^a$ All-electron reference values.}\\
-%\end{tabular}
-%\caption{HOMO energies ($\pi$, eV) for ethene and pseudo-ethene. The pseudo-potentials used in the pseudo-ethene are taken from optimised values for 
-%pseudo-CH\(^{\bullet}_{3}\) with only \(s\)-potentials and an exponent of 10.0. $d$ (a.u.) as defined 
-%in Figure~\ref{figure:ref_pseudo_diagram}.}
-%\label{table:ethene_s_pseudo}
-%\end{table}
-%
-%\newpage
-%
-%\begin{table}[ht]
-%\begin{tabular}{c c c c}
-%\hline
-%& \(p\) coefficient & \(p\) exponent \\
-%\hline
-%\(p_{z}\) potential & -3.267 & 0.295 \\
-%\hline
-%Calculation Type & \(s\) coefficient & \(s\) exponent & \(\pi\) \\
-%\hline
-%HF & 2.772 & 1.0 & -13.654 \\
-% & 6.173 & 5.0 & -14.011 \\
-% & 10.381 & 10.0 & -14.061 \\
-%\hline
-%PBE0 & 3.483 & 1.0 & -10.325 \\
-% & 9.801 & 5.0 & -10.409 \\
-% & 18.351 & 10.0 & -12.543 \\
-%\hline
-%\end{tabular}
-%\caption{\(\pi\) orbital energy values (eV) for pseudo-ethene, using \(s\) and \(p\) pseudo-potentials.
-%The pseudo-potentials are taken from a pseudo-CH\(^{\bullet}_{3}\) system optimised to give the correct all-electron HOMO energy.}
-%\label{table:p_potentials}
-%\end{table}
-%
-%\newpage
-%
-%\begin{table}[ht]
-%\begin{tabular}{c c c c c}
-%\hline
-%\(s\) coefficient & \(s\) exponent & $\Delta_{ST}$  & Ionisation  & $\varepsilon_{HOMO}$  \\
-%\hline
-%\multicolumn{2}{c}{\textit{Reference Values}} & -3.533 & -9.091 & -10.363 \\
-%\hline
-%&& \multicolumn{3}{l}{\(p\) coefficient -3.267; \(p\) exponent 0.295} \\
-%\hline
-%0.552 & 0.1 & -3.533 & -27.158 & -27.31 \\
-%0.608 & 1.0 & -3.533 & -28.247 & -28.395 \\
-%0.936 & 5.0 & -3.533 & -29.583 & -29.722 \\
-%\hline
-%\multicolumn{2}{c}{\textit{Optimal Values}} &\multicolumn{3}{l}{\(p\) coefficient -3.91; \(p\) exponent 0.624} \\
-%\hline
-%1.5 & 0.5 & -3.533 & -9.806 & -10.062 \\
-%\hline
-%\end{tabular}
-%\caption{\(s\)-potential fits to ethene properties as defined in the text (eV). All values are from HF calculations, and \(d = 0.5\) a.u.}
-%\label{table:ethene_excitations}
-%\end{table}
-
 
 \begin{table}[h]
 \begin{tabular}{c | c c c c | c c c}
@@ -911,11 +825,11 @@ System & coeff. & exp & coeff. & exp. & HOMO & $\Delta_{ST}$ & 1$^{st}$ Ionisati
 ref. CH$^{\bullet}_{3}$ & - & - & - & - & -10.537 & - & - \\
 ref. C$_{2}$H$_{4}$ & - & - & - & - & -10.363 & -3.522 & -9.091 \\
 \hline
-initial pseudo-CH$^{\bullet}_{3}$ & -3.268 & 0.295 & 10.381 & 10.0 & -10.537 & - & - \\
-initial pseudo-C$_{2}$H$_{4}$ & -3.268 & 0.295 & 10.381 & 10.0 & -14.061 & -9.214 & -14.021\\
+initial pseudo-CH$^{\bullet}_{3}$ & -3.268 & 0.295 & 10.381 & 10.000 & -10.537 & - & - \\
+initial pseudo-C$_{2}$H$_{4}$ & -3.268 & 0.295 & 10.381 & 10.000 & -14.061 & -9.214 & -14.021\\
 \hline
-final pseudo-CH$^{\bullet}_{3}$ & -3.910 & 0.624 & 1.5 & 0.5 & -10.000 & - & - \\
-final pseudo-C$_{2}$H$_{4}$ & -3.910 & 0.624 & 1.5 & 0.5 & -10.062 & -3.533 & -9.806 \\
+final pseudo-CH$^{\bullet}_{3}$ & -3.910 & 0.624 & 1.500 & 0.500 & -10.000 & - & - \\
+final pseudo-C$_{2}$H$_{4}$ & -3.910 & 0.624 & 1.500 & 0.500 & -10.062 & -3.533 & -9.806 \\
 \hline
 \end{tabular}
 \caption{\label{table:potential_params} Comparison of molecular properties of pseudo-CH$^{\bullet}_{3}$ and pseudo-C$_{2}$H$_{4}$ molecules, along with pseudo-potential parameters and reference values.}
@@ -992,6 +906,20 @@ to represent the triplet excited state from the closed shell singlet state.
 Example case of C$_{50}$H$_{52}$.}
 \end{table}
 %ENDTAB
+
+\begin{table}[ht]
+\begin{tabular}{lrr}
+\hline\hline
+Model            & def2-SV(P) & QZVPPD \\
+\hline
+All electrons    &        67 & 68928 \\
+Pseudo-potential &        28 &  8566 \\
+Gain (no unit)   &       2.4 &   8.0 \\
+\hline\hline
+\end{tabular}
+\caption{\label{tab:time}Time (in seconds) per SCF iteration and relative
+gain (time ratio all-electron/pseudo-potential) for a standard and a large basis set.} 
+\end{table}
 
 \end{document}
 
